add bootstrap link to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html style="text-align: center">
     <meta name="viewport" content="width=device-width">
 <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <script src="{{ url_for('static', filename='index.js') }}"></script>
     <title>Canada Cities Population</title>
 </head>
